<resources>
    <string-array name="scrolling_text">
        <item>Notre passion pour la pizza nous a conduit à
            rechercher en permanence des produits et des matières de qualité</item>

    </string-array>
    <string name="app_name">Una Vita</string>
    <string name="image_Unavita_Desc_Login">Description Unavita</string>
    <string name="login_EmailAdress">Adresse mail</string>
    <string name="login_Password">Mot de passe</string>
    <string name="btn_login_connexion">Connexion</string>
    <string name="login_password_forgot">mot de passe oublié ?</string>
    <string name="title_reservation">Réservations</string>
    <string name="title_param">Paramètres</string>
    <string name="title_apropos">A propos</string>
    <string name="title_contact">Contact</string>
    <string name="title_account">Mon compte</string>
    <string name="menu_deconnexion">Déconnexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="commandes_en_cours">Commandes en cours</string>
    <string name="r_servations">Réservations</string>
    <string name="guest"><u>Continuer en tant qu\'invité</u></string>
    <string name="pref_file">com.abc.preference_file</string>
    <string name="pref_login_status">com.abc.preference_login_status</string>
    <string name="pref_user_name">com.abc.preference_user_name</string>
</resources>