<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_2"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/title_param"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_item_3"
            android:icon="@drawable/ic_baseline_fmd_bad_24"
            android:title="@string/title_apropos"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_item_4"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/title_contact"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_item_5"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/title_account"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_item_7"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_deconnexion"
            app:showAsAction="never"
            />
    </group>

</menu>